2003/11/08 12:10 pcg

	The "more evil things?" release.

        * GType.xs: Allow |, & and ^ as operators on flags, too.
	* GType.xs: GFlags are now represented as blessed IV's, which indeed
        gave a _substantial_ speed improvement at an unimportant place. But
        it also saves memory and code, and looks nice, so I just had to do it.
        * GLog.xs: simplify newSVGLogLevelFlags, as excluding single values
        should no longer be necessary.

2003/11/08 11:30 pcg

        * GType.xs: In addition to the change yesterday, make sure
        that gperl_convert_back_flags only ever returns distinct,
        non-overlapping flag values. This requires an inherent ordering
        in the flag values, but if this isn't the case we can always sort
        the values first on bit-count (doh), or use a heuristic such as
        prefering single bit values.

2003/11/08 01:03 (-0500) muppetman

	* GClosure.xs: simplify, man...  both dSP and the PERL_UNUSED_VAR()
	should've been outside the conditional.  this may need to be
	macro-ified to prevent bugs in custom marshallers.

	* Glib.xs, GType.xs, gperl.h: move private function streq_enum
	to Glib.xs as new public function gperl_str_eq(), string compare that
	considers dash and underscore equivalent.  add gperl_str_hash(), a
	hashing function that considers dash and understore equivalent.

	* Glib.exports: updated with new functions

	* GSignal.xs: use custom hash and compare functions for the signal
	marshallers hash.

	* gperl.h: add prototypes for gperl_fundamental_type_from_package()
	and gperl_fundamental_package_from_type().

	* GObject.xs: remove unused var (which was shadowing an already-defined
	var in the parent scope).

2003/11/07 20:13 pcg

        * GType.xs: test SvPOK instead of SVt_PV, as many scalars
          can be valid strings.
	* GType.xs: apply muppet's patch to bless flags, modified to
          - implement overloaded operations on flags.