@@ -67,6 +67,8 @@ sub xsdocparse {
 	$parser->canonicalize_xsubs;
 	$parser->swizzle_pods;
 
+	$parser->clean_out_empty_pods(1, 2, 3, 4);
+
 	print "# THIS FILE IS AUTOMATICALLY GENERATED - ANY CHANGES WILL BE LOST\n";
 	print "# generated by $0 ".scalar (localtime)."\n";
 	print "# input files:\n";
@@ -79,6 +81,7 @@ sub xsdocparse {
 
 	return [ keys %{$parser->{data}} ];
 }
+
 
 =back
 
@@ -646,6 +649,33 @@ sub deep_copy_ref {
 		} else {
 				return $ref;
 		}
+}
+
+=item $parser->clean_out_empty_pods
+
+Looks throught the data memeber of the parser and removes any keys (and
+associated values) when no pod, enums, and xsubs exist for the package.
+
+=cut
+
+sub clean_out_empty_pods
+{
+	my $data = shift;
+	return unless (exists ($data->{data}));
+	$data = $data->{data};
+
+	my $pod;
+	my $xsub;
+	foreach (keys %$data)	
+	{
+		$pod = $data->{$_};
+		next if ((exists $pod->{pods} and scalar @{$pod->{pods}}) or
+				 exists $pod->{enums} or 
+				 scalar (grep (!/DESTROY/, 
+								 map { $_->{symname} } @{$pod->{xsubs}})));
+		print STDERR "Deleting $_ from doc.pl's \$data\n";
+		delete $data->{$_}; 
+	}
 }
 
 
